<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one_text"
        style="@style/BoxTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/box_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/box_two_text"
        style="@style/BoxTextStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:text="@string/box_two"
        app:layout_constraintTop_toBottomOf="@id/box_one_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/box_three_text"
        style="@style/BoxTextStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:text="@string/box_three"
        app:layout_constraintTop_toTopOf="@id/box_two_text"
        app:layout_constraintStart_toEndOf="@id/box_two_text" />

    <TextView
        android:id="@+id/box_four_text"
        style="@style/BoxTextStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:text="@string/box_four"
        app:layout_constraintTop_toBottomOf="@id/box_three_text"
        app:layout_constraintStart_toEndOf="@id/box_two_text" />

    <TextView
        android:id="@+id/box_five_text"
        style="@style/BoxTextStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:text="@string/box_five"
        app:layout_constraintTop_toBottomOf="@id/box_four_text"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintBottom_toBottomOf="@id/box_two_text" />

    <TextView
        android:id="@+id/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/box_two_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@id/label_text"
        app:layout_constraintStart_toEndOf="@id/label_text"
        app:layout_constraintTop_toBottomOf="@id/box_two_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/red_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/green_button"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/green_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/red_button"
        app:layout_constraintEnd_toStartOf="@id/yellow_button"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <Button
        android:id="@+id/yellow_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/green_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>